# OCaml-Connect-4

./: .gitignore  README.md  board.ml  board.mli  dune  dune-project  game.mli
command-line/: dune  main.ml
lib/: ai.ml  ai.mli  board.ml  dune  game.ml  game.mli
src/: ai.ml  ai.mli  board.ml  board.mli  dune  game.ml  game.mli  main.ml  mock.mli  server.ml  template.eml.ml
static/: app.js  style.css
tests/: dune  tests.ml
